--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -32,9 +32,8 @@
       margin: 4px 2px;
       transition-duration: 0.4s;
       cursor: pointer;
+      border-radius: 15px;
     }
-
-    
 
     .question-btn1 {
       background-color: white; 
@@ -58,13 +57,27 @@
       color: white;
     }
 
+    .w3-button{
+      border-radius: 15px;
+
+      
+    }
+
+    .w3-dropdown{
+      
+      
+      
+    }
+
     .w3-dropdown-click{
       background-color: coral;
-      
+      border-radius: 15px;
+      color: white;
     }
 
     #body,#body p, #body b,#body h1, #body h2, #body h3, #body h5,#body h6, #body li{
       font-family: 'Nanum Gothic', sans-serif;
+      font-weight: 500;
         /* font-weight: bold; */
     }
     
@@ -135,7 +148,7 @@
 
           <div class="w3-dropdown-click">
             <button onclick="filterfunc()" class="w3-button" 
-            style="padding-top: 16px; padding-right: 32px; padding-left: 32px; padding-bottom: 16px; border-radius: 15%;">정렬</button>
+            style="padding-top: 16px; padding-right: 32px; padding-left: 32px; padding-bottom: 16px;">정렬</button>
             <div id="Demo" class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom">
               <a href="#" class="w3-bar-item w3-button">최신순</a>
               <a href="#" class="w3-bar-item w3-button">인기순</a>
