--- a/view/commons/menuComm.html
+++ b/view/commons/menuComm.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-light navbar-expand-md">
-    <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span
+    <div class="container-fluid justify-content-center"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span
                 class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse justify-content-center" id="navcol-2"
             style="border-bottom: 2px solid rgb(150,150,150);font-size: 13px;font-family: 'Noto Sans KR', sans-serif;">
             <ul class="navbar-nav" style="font-family: 'Noto Sans KR', sans-serif;font-size: 20px;color: rgb(0,0,0);margin-left: -200px;">
-                <li class="nav-item"><a class="nav-link" href="#"
+                <li class="nav-item"><a class="nav-link" href="../../index.html"
                         style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;margin-left: 0;">홈</a></li>
                 <li class="nav-item"><a class="nav-link" href="#"
                         style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;">인기글</a></li>
-                <li class="nav-item"><a class="nav-link" href="#" style="color: rgb(0,0,0);margin-right: 21px;">스토리</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="../community/story.html" 
+                        style="color: rgb(0,0,0);margin-right: 21px;">스토리</a></li>
                 <li class="nav-item"><a class="nav-link" href="../community/questions.html"
                         style="color: rgb(0,0,0);font-size: 19px;margin-right: 20px;">질문과답변</a></li>
                 <li class="nav-item"><a class="nav-link" href="../community/event.html"
